--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ header {
   width: 250px;
 }
 
+.profile img {
+  width: 100%;
+}
+
 .bio {
   padding: 0px 20px 0px 20px;
   flex-shrink: 3;
@@ -39,7 +43,6 @@ header {
   min-width: 250px;
   text-align: center;
 }
-
 
 .Terminal-wrapper {
   display: flex;
@@ -73,7 +76,6 @@ footer {
 
   .bio {
     padding: 0px;
-
   }
 
   .photo {
@@ -84,7 +86,19 @@ footer {
   .Terminal {
     margin: 0px;
     width: 98%;
+  }
+}
 
+@media only screen and (max-device-width: 1024px) and (orientation: landscape) {
+  .profile img {
+    width: 60%;
+  }
+  .profile {
+    text-align: center;
+  }
+  .Terminal
+  {
+    height: 300px;
   }
 }
 
@@ -92,9 +106,6 @@ footer {
   .Terminal {
     width: 500px;
   }
-}
-
-@media screen and (min-width: 768) {
 }
 
 @media screen and (min-width: 968px) {
@@ -142,11 +153,10 @@ li.fa {
   color: 000;
 }
 
- .fa-terminal {
+.fa-terminal {
   color: white;
- }
+}
 
- 
 /* icons & typography */
 
 header img {
@@ -174,22 +184,19 @@ h2 {
   color: #f57453;
 }
 
-
-
 /* buttons */
 
-.button-wrapper
-{
+.button-wrapper {
   display: flex;
   justify-content: center;
-  margin-top:20px;
+  margin-top: 20px;
 }
 
 .button-terminal {
-  background-image: linear-gradient(-180deg, #37AEE2 0%, #056892 100%);
-  border-radius: .5rem;
+  background-image: linear-gradient(-180deg, #37aee2 0%, #056892 100%);
+  border-radius: 0.5rem;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #ffffff;
   display: flex;
   font-size: 14px;
   justify-content: center;
@@ -204,7 +211,7 @@ h2 {
 }
 
 .button-terminal:hover {
-  background-image: linear-gradient(-180deg, #1D95C9 0%, #17759C 100%);
+  background-image: linear-gradient(-180deg, #1d95c9 0%, #17759c 100%);
 }
 
 @media (min-width: 768px) {
